<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_bosh_sahifa">

    <fragment
        android:id="@+id/nav_bosh_sahifa"
        android:name="com.example.shakar_biznes_loyiha.ui.bosh_sahifa.BoshSahifaFragment"
        android:label="@string/menu_bosh_sahifa"
        tools:layout="@layout/fragment_boshsahifa" />

    <fragment
        android:id="@+id/nav_kunlik_hisobotlar"
        android:name="com.example.shakar_biznes_loyiha.ui.kunlik_hisobotlar.KunlikHisobotlarFragment"
        android:label="@string/menu_kunlik_hisobotlar"
        tools:layout="@layout/fragment_kunlik_hisobotlar" />
    <fragment
        android:id="@+id/nav_klientlar"
        android:name="com.example.shakar_biznes_loyiha.ui.klientlar.KlientlarFragment"
        android:label="@string/menu_klientlar"
        tools:layout="@layout/fragment_klientlar" />
    <fragment
        android:id="@+id/nav_kassa"
        android:name="com.example.shakar_biznes_loyiha.ui.kassa.KassaFragment"
        android:label="@string/menu_kassa"
        tools:layout="@layout/kassa_fragment" />
    <fragment
        android:id="@+id/nav_sklad"
        android:name="com.example.shakar_biznes_loyiha.ui.sklad.SkladFragment"
        android:label="@string/menu_Sklad"
        tools:layout="@layout/sklad_fragment" />
    <fragment
        android:id="@+id/nav_olingan_yuklar"
        android:name="com.example.shakar_biznes_loyiha.ui.olingan_yuklar.OlinganYuklarFragment"
        android:label="@string/menu_olingan_yuklar"
        tools:layout="@layout/olingan_yuklar_fragment" />
    <fragment
        android:id="@+id/nav_sotilgan_yuklar"
        android:name="com.example.shakar_biznes_loyiha.ui.sotilgan_yuklar.SotilganYuklarFragment"
        android:label="@string/menu_sotilgan_yuklar"
        tools:layout="@layout/sotilgan_yuklar_fragment" />
    <fragment
        android:id="@+id/nav_dollor_kursi"
        android:name="com.example.shakar_biznes_loyiha.ui.dollor_kursi.DollorKursiFragment"
        android:label="@string/menu_dollor_kursi"
        tools:layout="@layout/dollor_kursi_fragment" />
    <fragment
        android:id="@+id/nav_foydalanuvchilar"
        android:name="com.example.shakar_biznes_loyiha.ui.foydalanuvchilar.FoydalanuvchilarFragment"
        android:label="@string/menu_foydalanuvchilar"
        tools:layout="@layout/foydalanuvchilar_fragment" >
        <action
            android:id="@+id/action_nav_foydalanuvchilar_to_xodimQoshishFragment"
            app:destination="@id/xodimQoshishFragment" />
        <action
            android:id="@+id/action_nav_foydalanuvchilar_to_adminQoshishFragment"
            app:destination="@id/adminQoshishFragment" />
    </fragment>
    <fragment
        android:id="@+id/xodimQoshishFragment"
        android:name="com.example.shakar_biznes_loyiha.ui.XodimQoshish.XodimQoshishFragment"
        android:label="Yangi xodim qo'shish"
        tools:layout="@layout/xodim_qoshish_fragment" />
    <fragment
        android:id="@+id/adminQoshishFragment"
        android:name="com.example.shakar_biznes_loyiha.AdminQoshishFragment"
        android:label="Yangi admin qo'shish"
        tools:layout="@layout/fragment_admin_qoshish" />
</navigation>